Fix issue in package.json - jest setupFilesAfterEnv takes array.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "jest --verbose --watch"
   },
   "jest": {
-    "setupFilesAfterEnv": "<rootDir>/src/setupTests.js"
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ]
   },
   "keywords": [],
   "author": "",
